--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,8 @@ like stylesheet, google fonts, seo info etc. -->
   <!-- beginning of logo banner -->
     <section class="center">
       <!-- this is gonna be my own designed logo -->
-        <h1> L'or au Sphère </h1>
-        <h2> Magazine </h2>
+        <h1> L ' O R   AU   S P H È R E' </h1>
+        <h2> . m a g a z i n e. </h2>
         <!-- end of logo -->
         <hr>
         <nav>
@@ -42,13 +42,14 @@ like stylesheet, google fonts, seo info etc. -->
 
 {{ content }}
 
-<footer class="dark-bg grid">
-  <nav>
+<footer class="footer-nav">
+  <nav> <span>
     <a href="#"> Instagram </a>
     <a href="#"> Facebook </a>
     <a href="#"> Twitter </a>
-    <p> <span>© 2019 Stephie L'or | All Rights Reserved. <span></p>
-      </nav>
+    <p> © 2 0 1 9 S t e p h i e L ' o r | A l l R i g h t s R e s e r v e d. </p>
+    </span>
+  </nav>
 </footer>
 
   <script scr="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"> </script>
