--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,11 +50,11 @@ like stylesheet, google fonts, seo info etc. -->
 
 <footer class="footer-nav">
   <nav> <span>
-    <a href="#"> Instagram </a>
-    <a href="#"> Facebook </a>
-    <a href="#"> Twitter </a>
+    <a href="https://www.instagram.com/lovslor/"> Instagram </a>
+    <a href="https://www.facebook.com/stephie.lor.50"> Facebook </a>
+    <a href="https://twitter.com/lovslor"> Twitter </a>
     <hr> </hr>
-    <p> © 2 0 1 9 S t e p h i e L ' o r | A l l R i g h t s R e s e r v e d. </p>
+    <!-- */ <p> © 2 0 1 9 S t e p h i e L ' o r | A l l R i g h t s R e s e r v e d. </p> */ -->
     </span>
   </nav>
 </footer>
