--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,14 +6,8 @@ layout: default
 
   <h1> {{page.title}} </h1>
 
-  <img src={{page.banner_image}}>
+  <img src='{{page.banner_image}}'>
 
-  <!-- <div class="grid-spaceAround">
-    {% for picture in page.pictures %}
-        <div class="col-3 bg-image post-bg-image" style="background-image: url('{{picture}}')">
-        </div>
-    {% endfor %}
-  </div> -->
 
 <!-- row 1 -->
 <!-- <div class="col-6 lafricana"> </div>
