--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@ like stylesheet, google fonts, seo info etc. -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css">
 
   <link href="/style.css" rel="stylesheet">
+  <link href="/editor.css" rel="stylesheet">
 
   </head>
 
